--- a/wdk/example/public/index.html
+++ b/wdk/example/public/index.html
@@ -20,6 +20,6 @@
     <noscript>
         <strong>JavaScript must be enabled to run this page.</strong>
     </noscript>
-    <div id="app" v-cloak class="hasLoadingPlaceholder"></div>
+    <div id="app" v-cloak class="hasLoadingPlaceholder"><p>Loading...</p></div>
 </body>
 </html>
